Hide video view when not initialised to stop invisible mute button from appearing

--- a/src/scss/components/_video.scss
+++ b/src/scss/components/_video.scss
@@ -9,6 +9,10 @@
 	 	bottom: 0;
 	 	right: 0;
 	 	margin: auto;
+
+	 	&.hide {
+	 		display: none;
+	 	}
 	}
 
 	progress {
